test/Fail/LocalRewriteOutsideTele.err
LocalRewriteOutsideTele.agda:8.19-35: error: [LocalRewriteOutsideTelescope]
_ : x ≡ 0  is not a legal rewrite rule, since local rewrite rules
are (currently) only allowed in module telescopes. Consider
creating an anonymous module
when checking that the expression x ≡ 0 → Nat is a type
